tests/snapshots/integration__integration_tests__init__init_fish_prompt_hook.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - fish
    - "--hook"
    - prompt
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
# worktrunk shell integration for fish

# Helper function to parse wt output and handle directives
function _wt_exec
    set -l output (command wt $argv 2>&1)
    set -l exit_code $status

    # Parse output line by line
    for line in (string split \n -- $output)
        if string match -q '__WORKTRUNK_CD__*' -- $line
            # Extract path and change directory
            cd (string replace '__WORKTRUNK_CD__' '' -- $line)
        else
            # Regular output - print it
            echo $line
        end
    end

    return $exit_code
end

# Override wt command to add --internal flag for switch and finish
function wt
    set -l subcommand $argv[1]

    switch $subcommand
        case switch finish
            # Commands that need --internal for directory change support
            _wt_exec $subcommand --internal $argv[2..-1]
        case '*'
            # All other commands pass through directly
            command wt $argv
    end
end


# Prompt hook for tracking current worktree
function _wt_prompt_hook --on-event fish_prompt
    # Call wt to update tracking
    command wt hook prompt 2>/dev/null; or true
end


# Dynamic completion function
function __wt_complete
    # Call wt complete with current command line
    set -l cmd (commandline -opc)
    command wt complete $cmd 2>/dev/null
end

# Register dynamic completions
complete -c wt -n '__fish_seen_subcommand_from switch' -f -a '(__wt_complete)' -d 'Branch'
complete -c wt -n '__fish_seen_subcommand_from push' -f -a '(__wt_complete)' -d 'Target branch'
complete -c wt -n '__fish_seen_subcommand_from merge' -f -a '(__wt_complete)' -d 'Target branch'
complete -c wt -l base -f -a '(__wt_complete)' -d 'Base branch'

# Static completions (commands and flags)
# Print an optspec for argparse to handle cmd's options that are independent of any subcommand.
function __fish_wt_global_optspecs
	string join \n h/help V/version
end

function __fish_wt_needs_command
	# Figure out if the current invocation already has a command.
	set -l cmd (commandline -opc)
	set -e cmd[1]
	argparse -s (__fish_wt_global_optspecs) -- $cmd 2>/dev/null
	or return
	if set -q argv[1]
		# Also print the command, so this can be used to figure out what it is.
		echo $argv[1]
		return 1
	end
	return 0
end

function __fish_wt_using_subcommand
	set -l cmd (__fish_wt_needs_command)
	test -z "$cmd"
	and return 1
	contains -- $cmd[1] $argv
end

complete -c wt -n "__fish_wt_needs_command" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_needs_command" -s V -l version -d 'Print version'
complete -c wt -n "__fish_wt_needs_command" -f -a "init" -d 'Generate shell integration code'
complete -c wt -n "__fish_wt_needs_command" -f -a "list" -d 'List all worktrees'
complete -c wt -n "__fish_wt_needs_command" -f -a "switch" -d 'Switch to a worktree (creates if doesn\'t exist)'
complete -c wt -n "__fish_wt_needs_command" -f -a "finish" -d 'Finish current worktree and return to primary'
complete -c wt -n "__fish_wt_needs_command" -f -a "push" -d 'Push changes between worktrees'
complete -c wt -n "__fish_wt_needs_command" -f -a "merge" -d 'Merge and cleanup worktree'
complete -c wt -n "__fish_wt_needs_command" -f -a "help" -d 'Print this message or the help of the given subcommand(s)'
complete -c wt -n "__fish_wt_using_subcommand init" -l cmd -d 'Command prefix (default: wt)' -r
complete -c wt -n "__fish_wt_using_subcommand init" -l hook -d 'Hook mode (none, prompt)' -r
complete -c wt -n "__fish_wt_using_subcommand init" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand list" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand switch" -s b -l base -d 'Base branch to create from (only with --create)' -r
complete -c wt -n "__fish_wt_using_subcommand switch" -s c -l create -d 'Create a new branch'
complete -c wt -n "__fish_wt_using_subcommand switch" -l internal -d 'Use internal mode (outputs directives for shell wrapper)'
complete -c wt -n "__fish_wt_using_subcommand switch" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand finish" -l internal -d 'Use internal mode (outputs directives for shell wrapper)'
complete -c wt -n "__fish_wt_using_subcommand finish" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand push" -l allow-merge-commits -d 'Allow pushing merge commits (non-linear history)'
complete -c wt -n "__fish_wt_using_subcommand push" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand merge" -s k -l keep -d 'Keep worktree after merging (don\'t finish)'
complete -c wt -n "__fish_wt_using_subcommand merge" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand hook" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand completion" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand complete" -s h -l help -d 'Print help'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "init" -d 'Generate shell integration code'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "list" -d 'List all worktrees'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "switch" -d 'Switch to a worktree (creates if doesn\'t exist)'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "finish" -d 'Finish current worktree and return to primary'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "push" -d 'Push changes between worktrees'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "merge" -d 'Merge and cleanup worktree'
complete -c wt -n "__fish_wt_using_subcommand help; and not __fish_seen_subcommand_from init list switch finish push merge hook completion complete help" -f -a "help" -d 'Print this message or the help of the given subcommand(s)'

----- stderr -----
